@@ -18,7 +18,6 @@
 
 package com.hp.hpl.jena.sparql.modify;
 
-import com.hp.hpl.jena.graph.Graph ;
 import com.hp.hpl.jena.query.Dataset ;
 import com.hp.hpl.jena.query.DatasetFactory ;
 import com.hp.hpl.jena.sparql.core.DatasetGraph ;
@@ -44,31 +43,15 @@ public class GraphStoreBasic extends DatasetGraphWrapper implements GraphStore
         return DatasetFactory.create(getWrapped()) ;
     }
 
-    @Deprecated
-    @Override
-    public void startRequest() { GraphStoreUtils.sendToAll(this, GraphStoreEvents.RequestStartEvent) ; }
-    
     @Override
     public void startRequest(UpdateRequest request)
-    { GraphStoreUtils.sendToAll(this, GraphStoreEvents.RequestStartEvent) ; }
+    {}
 
-    @Deprecated
-    @Override
-    public void finishRequest()
-    { GraphStoreUtils.sendToAll(this, GraphStoreEvents.RequestFinishEvent) ; }
-    
     @Override
     public void finishRequest(UpdateRequest request)
-    { GraphStoreUtils.sendToAll(this, GraphStoreEvents.RequestFinishEvent) ; }
+    {}
 
     @Override
     public void close()
-    {
-        GraphStoreUtils.actionAll(this, 
-                                  new GraphStoreAction()
-        {
-            @Override
-            public void exec(Graph graph){ graph.close() ; }
-        }) ;
-    }
+    {}
 }
